# llama-jni-bridge

./: .gitignore  API-CHANGES.md  API_CHANGES_FIXES.md  BUILD-MACOS.md  BatchExample.java  BenchmarkLlama.java  CHANGES-SUMMARY.md  CMakeLists-minimal-v2.txt  CMakeLists-minimal.txt  CMakeLists.txt  COMPILATION-FIX.md  CacheReuseExample.java  Example.java  ExampleUsage.java  FIXES_AND_VERIFICATION.md  IMPROVEMENTS-SUMMARY.md  LargePrefixCacheExample.java  LlamaCppImproved.java  MemoryExample.java  NKeepExample.java  NewApiExample.java  PLAIN_TEXT_MODE_GUIDE.md  PROJECT-STATUS.md  QUICKSTART.md  README-JNI.md  READY-TO-PUSH.md  SAFETY-FEATURES.md  SCRIPTS-GUIDE.md  SafeExample.java  SafeShutdownExample.java  SimpleTest.java  TODO_PARAMETERS.md  TestLlama.java  TestParameterHandling.java  UPDATE-SUMMARY.md  cleanup-fork.sh  compile-java.sh  download_model.sh  push-to-github.sh  run_example.sh  (+2 more)
cmake/: backends.cmake
common/: build-info-stub.cpp
examples/: CMakeLists.txt
models/: ggml-vocab-baichuan.gguf  ggml-vocab-bert-bge.gguf  ggml-vocab-deepseek-coder.gguf  ggml-vocab-deepseek-llm.gguf  ggml-vocab-falcon.gguf  ggml-vocab-gpt-2.gguf  ggml-vocab-gpt-neox.gguf  ggml-vocab-llama-spm.gguf  ggml-vocab-mpt.gguf  ggml-vocab-phi-3.gguf  ggml-vocab-refact.gguf  ggml-vocab-starcoder.gguf
pocs/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/wrapper/: CMakeLists.txt  java_wrapper.cpp  main.cpp  org_llm_wrapper_LlamaCpp.h
tools/wrapper/org/llm/wrapper/: ComputeParams.java  GenerateParams.java  InitParams.java  LlamaCpp.java  ModelParams.java  SamplingParams.java
